classDiagram
direction LR
competitions --|> games : competition_id
competitions --|> clubs : domestic_competition_id
clubs --|> players : current_club_id
clubs --|> club_games : opponent/club_id
clubs --|> game_events : club_id
clubs --|> game_lineups : club_id
clubs --|> transfers : from/to_club_id
players --|> appearances : player_id
players --|> game_events : player_id
players --|> game_lineups : player_id
players --|> player_valuations : player_id
players --|> transfers : player_id
games --|> appearances : game_id
games --|> game_events : game_id
games --|> game_lineups : game_id
games --|> clubs : home/away_club_id
games --|> club_games : game_id

class competitions {
    competition_id
}
class games {
    game_id
    home/away_club_id
    competition_id
}
class game_events {
    game_id
    player_id
    club_id
}
class game_lineups {
    game_lineups_id
    game_id
    player_id
    club_id
}
class clubs {
    club_id
    domestic_competition_id
}
class club_games {
    club_id
    opponent_club_id
    game_id
}
class players {
    player_id
    current_club_id
}
class player_valuations {
    player_id
}
class transfers {
    player_id
    from/to_club_id
}
class appearances {
    appearance_id
    player_id
    game_id
}
